--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                    </nav>
                  </div>
                </div> 
-               <div class="mean-last">
-                       <a href="#"><img src="images/search_icon.png" alt="#" /></a> <a href="#">login/sing up</a></div>              
+            <!--    <div class="mean-last">
+                       <a href="#"><img src="images/search_icon.png" alt="#" /></a> <a href="#">login/sing up</a></div>  -->             
              </div>
            </div>
          </div>
@@ -372,7 +372,7 @@
 <!-- end learn --> 
 
 
-<!-- contact -->
+<!-- contact --
 <div id="contact" class="contact">
   <div class="container-fluid padding_left2">
     <div class="white_color">
@@ -414,7 +414,7 @@
       </div>
     </div>
 
-    <!-- end contact -->
+    -- end contact -->
 
     <!--  footer -->
     <footr>
@@ -423,12 +423,13 @@
           <div class="row">
 
             <div class="col-md-12">
-              <form class="news">
+              <!-- <form class="news">
                 <input class="newslatter" placeholder="Email" type="text" name=" Email">
                 <button class="submit">Subscribe</button>
-              </form>
+              </form> -->
             </div>
             <div class="col-md-12">
+            	<br>
               <h2>Newsletter</h2>
               <span>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in  </span>
             </div>
@@ -493,7 +494,7 @@
               </div>
               <div class="copyright">
                 <div class="container">
-                  <p>Copyright © 2019 Design by <a href="https://html.design/">Free Html Templates </a></p>
+                  <p>Made with ❤ by <a href="https://radarstechnologies.com/">Radars </a></p>
                 </div>
               </div>
             </div>
