--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       <li> <a href="#about">About</a> </li>
                       <li> <a href="#learn">My Profile</a> </li>
                       <li> <a href="#important">Become an Instructor</a> </li>
-                      <li> <a href="#contact">Contact</a> </li>
+                      <li> <a href="#address">Contact</a> </li>
                      </ul>
                    </nav>
                  </div>
@@ -435,17 +435,17 @@
             </div>
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
               <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 ">
-                  <div class="address">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+                  <div id="address" class="address">
                     <h3>Contact us </h3>
                     <ul class="loca">
                       <li>
-                        <a href="#"><img src="icon/loc.png" alt="#" /></a>London 145
-                        <br>United Kingdom </li>
+                        <a href="#"><img src="icon/loc.png" alt="#" /></a>SURAVI PONNARAMTHOTTAM
+                        <br>MAVELIKARA ALAPPUZHA, Kerala 690101</li>
                         <li>
-                          <a href="#"><img src="icon/email.png" alt="#" /></a>demo@gmail.com </li>
+                          <a href="mail:careervibesonline@gmail.com"><img src="icon/email.png" alt="#" /></a>careervibesonline@gmail.com </li>
                           <li>
-                            <a href="#"><img src="icon/call.png" alt="#" /></a>+12586954775 </li>
+                            <a href="tel:+919496793567"><img src="icon/call.png" alt="#" /></a>+91 94967 93567 </li>
                           </ul>
                           <ul class="social_link">
                             <li><a href="#"><img src="icon/fb.png"></a></li>
@@ -481,7 +481,7 @@
                         </div>
                       </div>
 
-                      <div class="col-lg-3 col-md-6 col-sm-6 ">
+                      <div class="col-lg-2 col-md-6 col-sm-6 ">
                         <div class="address">
                           <a href="index.html"> <img src="images/logo1.jpg" alt="logo"></a>
                         </div>
