--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>New Launch v1.0.0 | Responsive Coming Soon Page HTML</title>
+    <title>New Launch v1.0.0 | Responsive Coming Soon </title>
     <meta name="description" content="Premiun theme responsive Coming Soon Page HTML, clean code">
     <meta name="keywords" content="	coming soon, construction, creative, design, fullpage, fullscreen, information, keyboard, maintenance, modern, onepage, perfect, responsive, smart">
     <meta name="author" content="mzworks">
