--- a/radars/index.html
+++ b/radars/index.html
@@ -85,7 +85,7 @@
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -95,9 +95,9 @@
                 <div class="row">
                   <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                     <div class="text-bg">
-                      <h1>Search your Favorite Course here</h1>
-                      <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
-                      <a href="#">Read more</a> <a href="#">get a qoute</a>
+                      <h1>Feel your career</h1>
+                      <p>careervibesonline</p>
+                      <a href="tel:+919496793567">Call Us</a><a href="https://wa.me/919496793567">Whatsapp</a>
                     </div>
                   </div>
                   <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
@@ -117,9 +117,9 @@
                 <div class="row">
                   <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                     <div class="text-bg">
-                      <h1>Search your Favorite Course here</h1>
-                      <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
-                      <a href="#">Read more</a><a href="#">get a qoute</a>
+                      <h1>We care for your career as your parents care for you</h1>
+                      <p>careervibesonline</p>
+                      <a href="tel:+919496793567">Call Us</a><a href="https://wa.me/919496793567">Whatsapp</a>
                     </div>
                   </div>
 
@@ -135,7 +135,7 @@
           </div>
 
 
-          <div class="carousel-item">
+          <!-- <div class="carousel-item">
 
             <div class="container-fluid padding_dd">
               <div class="carousel-caption ">
@@ -155,7 +155,8 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
+
         </div>
       </div>
     </div>
@@ -181,10 +182,8 @@
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
-          <h2>About <strong class="yellow">Our Game</strong></h2>
-          <p> orem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptatem maiores eaque similique non distinctio voluptates perspiciatis omnis, repellendus ipsa aperiam, laudantium voluptatum nulla?.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, assumenda, vo
-          luptatum. Libero eligendi molestias iure error animi totam laudantium, aspernatur similique id eos at consectetur illo culpa,  </p>
+          <h2>About <strong class="yellow">carevibeonline</strong></h2>
+          <p> careervibesonline is a complete online platform which provides career consultation services with the application of a 3D psychometric test  </p>
           <a href="Javascript:void(0)">Read more</a>
         </div>
       </div>
@@ -309,10 +308,10 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
         <div class="box_text">
           <div class="titlepage">
-            <h2>My <strong class="yellow"> Courses</strong></h2>
+            <h2>Career Counselling with <strong class="yellow"> Psychometric Test</strong></h2>
           </div>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-          <a href="Javascript:void(0)">Read more</a>
+          <p>A standardised 3D psychometric test would be conducted for the aspirant in order to gain an insight on his/her career interests, career skills and career personality profile, followed by a career counselling session for a smart career plan.</p>
+          <!-- <a href="Javascript:void(0)">Rs. 2,950.00</a> -->
         </div>
       </div> 
     </div>
@@ -326,20 +325,22 @@
 <div id="learn" class="learn">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="titlepage">
-          <h2>Learn <strong class="yellow">the Practical way</strong></h2>
-          <span>packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</span>
+          <h2>Psychometric <strong class="yellow">Test Only</strong></h2>
+          <span>A standardised 3D Psychometric test would be conducted for the aspirant in order to gain an insight on his/her career interests, career skills, career personality profile and the results are communicated.</span>
+
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
+    
+    <!-- <div class="row"> -->
+      <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="learn_box">
           <figure><img src="images/img.jpg" alt="img"/></figure>
         </div>
       </div>
-    </div>
+      </div>
+    <!-- </div> -->
   </div>
 </div>
 <!-- MAKE --> 
@@ -348,14 +349,14 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2>Make Your <strong class="white_colo">Courses Standout</strong></h2>
+          <h2>Career <strong class="white_colo">Counselling Only</strong></h2>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
         <div class="make_text">
-          <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+          <p>A career counselling session would be conducted for the aspirant based on his/her career choices and preferences, without a psychometric evaluation.
           </p>
           <a href="Javascript:void(0)">Strat now</a>
         </div>
@@ -430,8 +431,8 @@
             </div>
             <div class="col-md-12">
             	<br>
-              <h2>Newsletter</h2>
-              <span>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in  </span>
+              <h2>carevibeonline</h2>
+              <span>careervibesonline is a complete online platform which provides career consultation services with the application of a 3D psychometric test  </span>
             </div>
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
               <div class="row">
