--- a/index.html
+++ b/index.html
@@ -349,16 +349,16 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2>Career <strong class="white_colo">Counselling Only</strong></h2>
+          <h2>Career <strong class="white_colo">Counselling</strong></h2>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
         <div class="make_text">
-          <p>A career counselling session would be conducted for the aspirant based on his/her career choices and preferences, without a psychometric evaluation.
+          <p>Using accurate scientific career assessment solutions, Careertestlive’s team of skilled career counsellors, provides customised and individual career counselling to student and their parents. Their friendly, and welcoming approach encourages students and their parents to address and clear their queries and concerns regarding higher education and career development. Individual career counselling sessions are available in our GOLD and PLATINUM packages.
           </p>
-          <a href="Javascript:void(0)">Strat now</a>
+          <a href="https://wa.me/919496793567">Find More</a>
         </div>
       </div>
       <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
