--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="about-box">
           <h2>About <strong class="yellow">carevibeonline</strong></h2>
           <p> careervibesonline is a complete online platform which provides career consultation services with the application of a 3D psychometric test  </p>
-          <a href="Javascript:void(0)">Read more</a>
+          <a href="https://wa.me/919496793567">Learn More</a>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
