--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               </div>
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="box_my">
-                  <figure><img src="images/my2.jpg"></figure>
+                  <figure><img src="images/3 way.png"></figure>
                   <div class="overlay">
                     <h3>3-way approach</h3>
                     <p>An ideal career should look like and understands your liking, capabilities & character traits.</p>
@@ -290,7 +290,7 @@
               </div>
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <div class="box_my">
-                  <figure><img src="images/my4.jpg"></figure>
+                  <figure><img src="images/my4.png"></figure>
                   <div class="overlay">
                     <h3>Academic route finder</h3>
                     <p>We Find, the most suitable academic courses that you should pursue after school/college.</p>
