--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
           <h2>About <strong class="yellow">carevibeonline</strong></h2>
-          <p> careervibesonline is a complete online platform which provides career consultation services with the application of a 3D psychometric test  </p>
+          <p> careervibesonline.com is a complete online platform, which provides career consultation services with the application of a standardised and proven 3 Dimensional (3D) Psychometric Career Assessment Test. It is an authorised franchisee of a popular organization, successfully providing career consultation services for students and job seekers across the globe for the past 10 years (careertestlive.in, Astra HR Innovations Pvt Ltd, Cochin)  </p>
           <a href="https://wa.me/919496793567">Learn More</a>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
-          <figure><img src="images/about.jpg" alt="#" /></figure>
+          <figure><img src="images/Careers.jpg" alt="#" /></figure>
         </div>
       </div>
     </div>
@@ -326,8 +326,15 @@
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="titlepage">
-          <h2>Psychometric <strong class="yellow">Test Only</strong></h2>
-          <span>A standardised 3D Psychometric test would be conducted for the aspirant in order to gain an insight on his/her career interests, career skills, career personality profile and the results are communicated.</span>
+          <!-- <h2>Psychometric <strong class="yellow">Test Only</strong></h2> -->
+          <h3> <strong class="yellow">Career Counselling with Psychometric Test Report (Rs.2950/-) [Gold Package]</strong></h3>
+          <br>A 3D Psychometric Test would be conducted for the aspirant, to gain an insight on his/her Career Interests, Career Skills and Career Personality Profile, followed by an Online Career Counselling session for a Smart Career Plan.</br>
+          <br>
+          <h3> <strong class="yellow">Psychometric Test Report without Counselling (Rs. 1500/-) [Silver Package]</strong></h3>
+          <br>A Standardised 3D Psychometric Test would be conducted for the aspirant to obtain a conclusive report of Matching/ Unmatching Career Fields, based on his/ her Career Interests, Career Skills, Career Personality Profile and the test result is communicated.</br>
+          <br>
+          <h3> <strong class="yellow">Career Counselling Only (Rs.1000/-) [Bronze Package]</strong></h3>
+          <br>An Online Career Counselling session would be conducted for the aspirant, based on his/ her Career choices and preferences, without a Psychometric evaluation.</br>
 
         </div>
       </div>
@@ -335,7 +342,7 @@
     <!-- <div class="row"> -->
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="learn_box">
-          <figure><img src="images/career.png" alt="img"/></figure>
+          <figure><img src="images/psycho2.png" alt="img"/></figure>
         </div>
       </div>
       </div>
@@ -351,7 +358,7 @@
           <h2>Career <strong class="white_colo">Counselling</strong></h2>
         </div>
         <div class="make_text">
-          <p>Using accurate scientific career assessment solutions, Careertestlive’s team of skilled career counsellors, provides customised and individual career counselling to student and their parents. Their friendly, and welcoming approach encourages students and their parents to address and clear their queries and concerns regarding higher education and career development. Individual career counselling sessions are available in our GOLD and PLATINUM packages.
+          <p>Using accurate scientific career assessment solutions, Our team of skilled career counsellors, provides customised and individual career counselling to student and their parents. Their friendly, and welcoming approach encourages students and their parents to address and clear their queries and concerns regarding higher education and career development. Individual career counselling sessions are available in our GOLD and PLATINUM packages.
           </p>
           <a href="https://wa.me/919496793567">Find More</a>
         </div>
@@ -365,6 +372,21 @@
   </div>
 </div>
 <!-- end MAKE --> 
+
+<div id="faq" class="important">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="titlepage">
+          <h2>Frequently Asked Questions <strong class="yellow"></strong></h2>
+          <br>
+          <h3><strong class="yellow">Is it possible for a person to attain the proper selection of a career field by means of a Psychometric Test? </strong></h3>
+          <span>The basic purpose of a Psychometric Career Test is to identify the career fields in which a person’s interest, skills, as well as personality, matches properly. The right blend of these three factors is essential for career success. Psychologically, it is proven that a person could perform well in more than one career field; strictly saying, about two different career fields might be a match for a person. Our psychometric questionnaires are designed, standardised, tested, analysed, and periodically updated on this concept.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- end learn --> 
 
 
