--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
 </div>
 <!-- end MAKE --> 
 
-<div id="faq" class="important">
+<div id="faq">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="titlepage">
+        <div class="fq_cnt">
           <h2>Frequently Asked Questions <strong class="yellow"></strong></h2>
           <br>
           <h3><strong class="yellow">Is it possible for a person to attain the proper selection of a career field by means of a Psychometric Test? </strong></h3>
