--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
                       </div>
 
                       <div class="col-lg-2 col-md-6 col-sm-6 ">
-                        <div class="address">
-                          <a href="index.html"> <img src="images/logo1.jpg" alt="logo"></a>
+                        <div class="address text-center">
+                          <a href="index.html"> <img class="ft_img_cut" src="images/logo1.jpg" alt="logo"></a>
                         </div>
                       </div>
                     </div>
